src/objects/Stakeholder__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Contacts</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Name__c</fullName>
        <label>Stakeholder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Contract Engineer</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Grading &amp; Development Engineer</fullName>
                </value>
                <value>
                    <fullName>McQuay Engineer</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Real Estate Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Structural Engineer</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Surveyor</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>SK-{00000}</displayFormat>
        <label>Stakeholder No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>